# Yolov8TensorrtRos

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: engineRosWrapper.h  engineTool.h
launch/: tensorrt_yolov8.launch  tensorrt_yolov8_center.launch  tensorrt_yolov8_left.launch  tensorrt_yolov8_right.launch
script/: test_gpu.py  visualize_boundaries.py
src/: engine.cpp  engine.h  engineRosWrapper.cpp  engineTool.cpp  main.cpp
